last card visiblity fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,7 @@ body{
     margin: 0;
     padding: 0;
     overflow-y: scroll;
+    height: 100vh;
 }
 
 h1 {
@@ -624,5 +625,8 @@ p-schedule button
   body {
     margin-bottom: 60px;
   }
+    .global-layout {
+        height: calc(100vh - 52px); /* viewport height - nav bar */
+    }
 }
 
